<?xml version="1.0" encoding="utf-8"?>

       <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/rugbypost"
        tools:context="com.example.android.scorekeepernoscroll.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="68"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/team"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="24dp"
                    android:text="@string/team_a_score"
                    android:textColor="#FFFFFF"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/try_TeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTryPointsA"
                    android:text="@string/try_points" />

                <Button
                    android:id="@+id/conversion_TeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addConversionPointsA"
                    android:paddingBottom="8dp"
                    android:text="@string/conversion" />

                <Button
                    android:id="@+id/penalty_kick_TeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addPenaltyPointsA"
                    android:text="@string/penalty" />

                <Button
                    android:id="@+id/drop_goal_TeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addDropPointsA"
                    android:paddingBottom="8dp"
                    android:text="@string/drop" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="1dp"
                android:layout_height="375dp"
                android:layout_weight="1"
                android:background="#424242" />

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="68"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/teamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/bbb"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="24dp"
                    android:text="@string/team_a_score"
                    android:textColor="#FFFFFF"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/three_points_for_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTryPointsB"
                    android:text="@string/try_points" />

                <Button
                    android:id="@+id/two_points_for_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addConversionPointsB"
                    android:paddingBottom="8dp"
                    android:text="@string/conversion" />

                <Button
                    android:id="@+id/one_point_for_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addPenaltyPointsB"
                    android:text="@string/penalty" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addDropPointsB"
                    android:paddingBottom="8dp"
                    android:text="@string/drop" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:onClick="reset"
            android:text="@string/reset" />
    </RelativeLayout>




